# libhal-imx

./: CMakeLists.txt  README.md  conanfile.py
.github/workflows/: ci.yml
conan/profiles/: imx  profile1  profile2  teensy4  teensy41
demos/: CMakeLists.txt  conanfile.py
demos/applications/: blinker.cpp
include/libhal-imx/: clock.hpp  constants.hpp  input_pin.hpp  output_pin.hpp  pin.hpp  power.hpp
linker_scripts/libhal-imx/: teensy4.ld  teensy41.ld
src/: gpio_reg.hpp  input_pin.cpp  output_pin.cpp  pin.cpp  pin_reg.hpp  power.cpp
test_package/: CMakeLists.txt
tests/: CMakeLists.txt  imx.test.cpp  main.test.cpp
